# HADES-burn

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  RESEARCH_GOALS.md
archive/: python-hades-requirements.txt
config/: hades.yaml
crates/hades-cli/: Cargo.toml
crates/hades-cli/src/: dispatch.rs  main.rs
crates/hades-cli/src/commands/: arxiv.rs  arxiv_sync.rs  codebase.rs  codebase_ingest.rs  codebase_mgmt.rs  codebase_validate.rs  daemon.rs  db.rs  db_graph.rs  db_read.rs  db_schema.rs  db_search.rs  db_write.rs  embed.rs  embed_mgmt.rs  graph_embed.rs  graph_embed_query.rs  graph_embed_train.rs  graph_embed_update.rs  ingest.rs  mod.rs  output.rs  smell.rs  smell_mgmt.rs  system.rs  task.rs  task_mgmt.rs
crates/hades-core/: Cargo.toml
crates/hades-core/src/: daemon_client.rs  dispatch.rs  lib.rs
crates/hades-core/src/arxiv/: client.rs  mod.rs  sync.rs  sync_metadata.rs  types.rs
crates/hades-core/src/batch/: error.rs  mod.rs  processor.rs  progress.rs  rate_limit.rs  state.rs
crates/hades-core/src/chunking/: late.rs  mod.rs  strategies.rs
crates/hades-core/src/code/: chunking.rs  language.rs  mod.rs  python.rs  rust_ast.rs  rust_imports.rs  symbols.rs
crates/hades-core/src/code/rust_analyzer/: client.rs  edges.rs  mod.rs  session.rs  symbols.rs
crates/hades-core/src/config/: mod.rs  types.rs
crates/hades-core/src/db/: cache.rs  collections.rs  crud.rs  error.rs  index.rs  keys.rs  mod.rs  pool.rs  query.rs  transport.rs  vector.rs
crates/hades-core/src/graph/: export.rs  loader.rs  mod.rs  runtime_schema.rs  schema.rs  types.rs
crates/hades-core/src/persephone/: embedder_http.rs  embedding.rs  extraction.rs  mod.rs  training.rs
crates/hades-core/src/pipeline/: mod.rs  orchestrator.rs
crates/hades-core/tests/: arango_cache.rs  arango_crud.rs  arango_index.rs  arango_query.rs  arango_transport.rs  config_integration.rs  embedding_client.rs  extraction_client.rs  graph_loader.rs  pipeline.rs  training_client.rs
crates/hades-core/tests/fixtures/: hades.yaml
crates/hades-prefetch/: Cargo.toml
crates/hades-prefetch/src/: lib.rs  orchestrator.rs  prefetcher.rs  tensor.rs
crates/hades-proto/: Cargo.toml  build.rs
crates/hades-proto/src/: lib.rs
crates/hades-proto/tests/: proto_types.rs
docs/: codebase-graph-ontology.md  daemon-protocol.md  design-agent-memory-and-system-prompt.md  model-operation-vocabulary.md  og-rag-report.md
proto/persephone/common/: common.proto
proto/persephone/embedding/: embedding.proto
proto/persephone/extraction/: extraction.proto
proto/persephone/training/: training.proto
services/: Makefile  pyproject.toml
services/embedding/: __init__.py  config.py  http_server.py  jina_v4.py  server.py
services/extraction/: __init__.py  config.py  docling_backend.py  latex_backend.py  server.py
services/systemd/: embedder.conf  extractor.conf  hades-daemon.service  hades-embedder-grpc.service  hades-embedder.service  hades-extractor.service  hades-sysusers.conf  hades-tmpfiles.conf
