[workspace]
members = [
    "crates/hades-cli",
    "crates/hades-core",
    "crates/hades-proto",
    "crates/hades-prefetch",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Todd Bucy"]
license = "Apache-2.0"
repository = "https://github.com/toddwbucy/HADES-Burn"
description = "Rust rewrite of the HADES knowledge graph system"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1"
thiserror = "2"

# CLI
clap = { version = "4", features = ["derive", "env"] }
