[workspace]
members = [
    "crates/hades-cli",
    "crates/hades-core",
    "crates/hades-proto",
    "crates/hades-prefetch",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Todd Bucy"]
license = "Apache-2.0"
repository = "https://github.com/toddwbucy/HADES-Burn"
description = "Rust rewrite of the HADES knowledge graph system"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1"
thiserror = "2"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# HTTP client (Unix socket via hyperlocal, TCP via hyper-util)
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "tokio"] }
hyperlocal = { version = "0.9", features = ["client"] }
http = "1"
http-body-util = "0.1"
tower-service = "0.3"

# Encoding
base64 = "0.22"

# Regex
regex = "1"

# Async
futures = "0.3"

# Cache
moka = { version = "0.12", features = ["future"] }

# gRPC / Protobuf
tonic = "0.13"
prost = "0.13"
prost-types = "0.13"
tonic-build = "0.13"
