[workspace]
members = [
    "crates/hades-cli",
    "crates/hades-core",
    "crates/hades-proto",
    "crates/hades-prefetch",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Todd Bucy"]
license = "Apache-2.0"
repository = "https://github.com/toddwbucy/HADES-Burn"
description = "Rust rewrite of the HADES knowledge graph system"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1"
thiserror = "2"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# HTTP client (Unix socket via hyperlocal, TCP via hyper-util)
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "tokio"] }
hyperlocal = { version = "0.9", features = ["client"] }
http = "1"
http-body-util = "0.1"
tower-service = "0.3"

# Encoding
base64 = "0.22"

# Regex
regex = "1"

# Async
futures = "0.3"

# Cache
moka = { version = "0.12", features = ["future"] }

# gRPC / Protobuf
tonic = "0.13"
prost = "0.13"
prost-types = "0.13"
tonic-build = "0.13"

# Internal crates
hades-proto = { path = "crates/hades-proto" }

# Tower middleware
tower = "0.5"

# HTTP client (high-level)
reqwest = { version = "0.12", features = ["json", "stream"] }

# XML parsing
roxmltree = "0.21"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# URL encoding
urlencoding = "2"

# Tokio utilities (StreamReader for streaming downloads)
tokio-util = { version = "0.7", features = ["io"] }

# Code analysis (Python AST, Rust AST, hashing)
rustpython-parser = "0.4"
syn = { version = "2", features = ["full", "visit"] }
sha2 = "0.11"
proc-macro2 = { version = "1", features = ["span-locations"] }

# File traversal
walkdir = "2"

# Tensor serialization
safetensors = "0.7"
memmap2 = "0.9"

# Random number generation
rand = "0.9"

# Test utilities
tempfile = "3"
