[package]
name = "hades-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core library: config, DB client, graph engine, pipeline logic"

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3.27.0"
