[package]
name = "hades-proto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "gRPC/protobuf definitions for the Persephone provider protocol"

[dependencies]
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true

[build-dependencies]
tonic-build.workspace = true
